<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_of_the_game"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="#000000"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/rules"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/generating_number_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_random_number"
        android:textAllCaps="false"
        android:textColor="@color/Button_text_color"
        android:background="@drawable/button_background"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/generated_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_m_generated"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess_the_number"
        android:textColor="#000000"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/number_guessed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_here_guessed"
        android:layout_margin="20dp"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_if_number_is_correct"
        android:textAllCaps="false"
        android:textColor="@color/Button_text_color"
        android:background="@drawable/button_background"
        android:layout_margin="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/number_of_guess_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_guesses_remaining"
        android:textColor="#000000"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/integer_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integer_remaining"
            android:textColor="#000000"
            android:layout_toRightOf="@+id/number_of_guess_remaining"
            android:gravity="center_horizontal"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/check_win_or_lose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/change_face"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/home_and_win_ic"/>
    </LinearLayout>

</ScrollView>